--- a/src/pages/samples/ReactHookForm.module.css
+++ b/src/pages/samples/ReactHookForm.module.css
@@ -10,7 +10,7 @@
     border-radius: 4px;
     border: 1px solid #333333;
     padding: 10px 15px;
-    margin-bottom: 1rem;
+    margin-top: 1rem;
     font-size: 14px;
 }
 
